# CPGit

./: .gitignore  README.md  index.sql  pyproject.toml  requirements.txt  schema.sql
cpg/: cffi_backend.py  cli.py  database.py  help.py  master.py  problemHelp.py  slugs.py  tags.py  version_info.py  version_open.py  version_save.py  versioning_checks.py  versioning_control.py
